Add simple UI using Bootrstrap. Add top referrers request.

--- a/client/src/app/index.less
+++ b/client/src/app/index.less
@@ -10,8 +10,18 @@
  *  The list of variables are listed here bower_components/bootstrap/less/variables.less
  */
 
+.content-container {
+  padding-top: 20px;
+}
 
+.nav {
+  padding-top: 16px;
+}
 
+.badge {
+  color: #3c763d;
+  background-color: #dff0d8;
+}
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
  *  all your less files automatically
